[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne-memory"
version = "0.6.0"
description = "Cross-source AI memory and knowledge weaving system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Chaobs" }
]
keywords = [
    "ai",
    "memory",
    "knowledge-graph",
    "vector-search",
    "knowledge-management",
    "rag",
    "mcp",
    "web-ui"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "chromadb>=0.4.0",
    "typer>=0.9.0",
    "rich>=10.11.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "PyMuPDF>=1.23.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "networkx>=3.0",
    "SQLAlchemy>=2.0.0",
    "requests>=2.31.0",
    "markitdown>=0.1.0",
]
# RAG pipeline dependencies (installed separately or via: pip install ariadne[rag])
rag = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
]
# Web UI dependencies (installed separately or via: pip install ariadne[web])
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "dashscope>=1.14.0",
    "groq>=0.4.0",
]
rag = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ariadne = "ariadne.cli:main"

[project.urls]
Homepage = "https://github.com/Chaobs/ariadne-memory"
Documentation = "https://github.com/Chaobs/ariadne-memory#readme"
Repository = "https://github.com/Chaobs/ariadne-memory"
Issues = "https://github.com/Chaobs/ariadne-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["ariadne"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run tests in alphabetical order (models → builder → linter → ingestor → obsidian → cli)
# Add Python path so 'import vendor' works in tests
pythonpath = ["."]
# Coverage configuration
addopts = [
    "-ra",           # show summary of all test outcomes
    "--tb=short",    # shorter traceback format
]
markers = [
    "unit: Unit tests (no external dependencies, no LLM)",
    "integration: Integration tests (may use filesystem)",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
